--- a/configuration.properties
+++ b/configuration.properties
@@ -18,4 +18,5 @@ guru.draq:https://demo.guru99.com/test/drag_drop.html
 loop.practice:https://loopcamp.vercel.app/
 loop.hover:https://loopcamp.vercel.app/hovers.html
 loop.upload:https://loopcamp.vercel.app/upload.html
+etsy:https://www.etsy.com/
 
