--- a/configuration.properties
+++ b/configuration.properties
@@ -19,4 +19,7 @@ loop.practice:https://loopcamp.vercel.app/
 loop.hover:https://loopcamp.vercel.app/hovers.html
 loop.upload:https://loopcamp.vercel.app/upload.html
 etsy:https://www.etsy.com/
+dynamicLoading.username:tomsmith
+dynamicLoading.incorrectPassword:incorrect
+
 
