--- a/configuration.properties
+++ b/configuration.properties
@@ -21,5 +21,6 @@ loop.upload:https://loopcamp.vercel.app/upload.html
 etsy:https://www.etsy.com/
 dynamicLoading.username:tomsmith
 dynamicLoading.incorrectPassword:incorrect
+smartbear.url:http://secure.smartbearsoftware.com/samples/testcomplete12/WebOrders/login.aspx
 
 
